--- a/wifinance-app/src/ViewHistory.css
+++ b/wifinance-app/src/ViewHistory.css
@@ -6,7 +6,7 @@
     display: flex;
     flex-direction: row;
 }
-.transaction-data-row p {
+.transaction-data-info {
     height: 50px;
     width: 300px;
 }
